Lab 9 - Login and welcome pages

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -10,21 +10,23 @@
     </ui:define>
 
     <ui:define name="content">
-        Login Page
-
         <h:form>
             <p>
                 <h:panelGroup layout="block">
-                    <h:outputLabel value="Username: " for="userName" />
-                    <h:inputText id="userName" value="#{loginController.user.username}"/>
-                    <h:message for="userName" errorStyle="color: red" />
+                    <h:outputLabel value="Username: " for="username" />
+                    <h:inputText binding="#{username}" id="username" 
+                                 styleClass="#{username.valid ? 'form-control' : 'form-control is-invalid'}"
+                                 value="#{loginController.user.username}"/>
+                    <h:message for="username" errorStyle="color: red" />
                 </h:panelGroup>
             </p>
 
             <p>
                 <h:panelGroup layout="block">
                     <h:outputLabel value="Password:" for="password" />
-                    <h:inputSecret id="password" value="#{loginController.user.password}"/>
+                    <h:inputSecret binding="#{password}" id="password" 
+                                   styleClass="#{password.valid ? 'form-control' : 'form-control is-invalid'}"
+                                   value="#{loginController.user.password}"/>
                     <h:message for="password" errorStyle="color: red" />
                 </h:panelGroup>
             </p>
