--- a/src/main/webapp/teacher/welcome.xhtml
+++ b/src/main/webapp/teacher/welcome.xhtml
@@ -3,7 +3,8 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="jakarta.faces.facelets"
                 template="../WEB-INF/templates/authNtemplate.xhtml"
-                xmlns:h="jakarta.faces.html">
+                xmlns:h="jakarta.faces.html"
+                xmlns:f="jakarta.faces.core">
 
     <ui:define name="title">
         Blackboard Teacher. Your teacher username is #{loginController.authenticatedUsername}
@@ -12,9 +13,39 @@
     <ui:define name="content">
         Teacher Content
         
-        <ul>
-            <li><h:link outcome="/welcome.xhtml">Home</h:link></li>
-        </ul>
+        <h:dataTable 
+            styleClass="table table-striped table-hover"
+            value="#{teacherWelcomeController.teacher.lessons}" var="lesson">
+            <h:column>
+                <f:facet name="header">Lesson Id</f:facet>
+                <h:outputText value="#{lesson.id}"/>
+            </h:column>
+
+            <h:column>
+                <f:facet name="header">Lesson Name</f:facet>
+                <h:outputText value="#{lesson.title}"/>
+            </h:column>
+
+            <h:column>
+                <f:facet name="header">Lesson Date</f:facet>
+                <h:outputText value="#{lesson.lessonDate}">
+                    <f:convertDateTime type="localDate" dateStyle="long"/>
+                </h:outputText>
+            </h:column>
+
+            <h:column>
+                <f:facet name="header">Lesson Type</f:facet>
+                <h:outputText value="#{lesson.type}"/>
+            </h:column>
+
+            <h:column>
+                <f:facet name="header">Students</f:facet>
+                <ui:repeat value="#{lesson.students}" var="student">
+                    <h:outputText value="#{student.name}"/>
+                </ui:repeat>
+            </h:column>
+
+        </h:dataTable>
     </ui:define>
 
 </ui:composition>
