--- a/src/main/webapp/admin/welcome.xhtml
+++ b/src/main/webapp/admin/welcome.xhtml
@@ -3,7 +3,8 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="jakarta.faces.facelets"
                 template="../WEB-INF/templates/authNtemplate.xhtml"
-                xmlns:h="jakarta.faces.html">
+                xmlns:h="jakarta.faces.html"
+                xmlns:f="jakarta.faces.core">
 
     <ui:define name="title">
         Blackboard Admin. Your admin username is #{loginController.authenticatedUsername}
@@ -12,9 +13,29 @@
     <ui:define name="content">
         Admin Content
         
-        <ul>
-            <li><h:link outcome="/welcome.xhtml">Home</h:link></li>
-        </ul>
+        <h:dataTable 
+            styleClass="table table-dark table-striped table-hover"
+            value="#{lessonService.readAll()}" var="lesson">
+            <h:column>
+                <f:facet name="header">Lesson Id</f:facet>
+                <h:outputText value="#{lesson.id}"/>
+            </h:column>
+
+            <h:column>
+                <f:facet name="header">Lesson Name</f:facet>
+                <h:outputText value="#{lesson.title}"/>
+            </h:column>
+
+            <h:column>
+                <f:facet name="header">Lesson Date</f:facet>
+                <h:outputText value="#{lesson.lessonDate}"/>
+            </h:column>
+
+            <h:column>
+                <f:facet name="header">Lesson Type</f:facet>
+                <h:outputText value="#{lesson.type}"/>
+            </h:column>
+        </h:dataTable>
     </ui:define>
 
 </ui:composition>
