--- a/src/main/webapp/teacher/createLessonConfirmation.xhtml
+++ b/src/main/webapp/teacher/createLessonConfirmation.xhtml
@@ -9,12 +9,12 @@
         Your lesson is saved!
         
         <ul>
-            <li>#{lessonController.lesson.id}</li>
-            <li>#{lessonController.lesson.title}</li>
-            <li>#{lessonController.lesson.lessonDate}</li>
-            <li>#{lessonController.lesson.type}</li>
-            <li>#{lessonController.lesson.createdTimestamp}</li>
-            <li>#{lessonController.lesson.version}</li>
+            <li>#{teacherCreateLessonController.lesson.id}</li>
+            <li>#{teacherCreateLessonController.lesson.title}</li>
+            <li>#{teacherCreateLessonController.lesson.lessonDate}</li>
+            <li>#{teacherCreateLessonController.lesson.type}</li>
+            <li>#{teacherCreateLessonController.lesson.createdTimestamp}</li>
+            <li>#{teacherCreateLessonController.lesson.version}</li>
         </ul>
 
     </h:body>
