--- a/src/main/webapp/teacher/deleteLesson.xhtml
+++ b/src/main/webapp/teacher/deleteLesson.xhtml
@@ -4,16 +4,15 @@
                 xmlns:ui="jakarta.faces.facelets"
                 template="../WEB-INF/templates/authNtemplate.xhtml"
                 xmlns:h="jakarta.faces.html"
-                xmlns:p="jakarta.faces.passthrough"
                 xmlns:f="jakarta.faces.core"
                 xmlns:ezcomp="jakarta.faces.composite/ezcomp">
 
     <ui:define name="title">
-        Create Lesson
+        Delete Lesson?
     </ui:define>
 
     <ui:define name="content">
-        <ezcomp:lesson operation="create" formAction="#{teacherLessonController.saveLesson()}"/>
+        <ezcomp:lesson operation="delete" formAction="#{teacherLessonController.deleteLesson()}"/>
     </ui:define>
 
 </ui:composition>
