Lab 10 - Lesson date update

--- a/src/main/webapp/teacher/welcome.xhtml
+++ b/src/main/webapp/teacher/welcome.xhtml
@@ -38,12 +38,12 @@
                 <h:outputText value="#{lesson.type}"/>
             </h:column>
 
-            <h:column>
+<!--            <h:column>
                 <f:facet name="header">Students</f:facet>
                 <ui:repeat value="#{lesson.students}" var="student">
                     <h:outputText value="#{student.name}"/>
                 </ui:repeat>
-            </h:column>
+            </h:column>-->
 
             <h:column>
                 <h:form>
