--- a/src/main/webapp/admin/welcome.xhtml
+++ b/src/main/webapp/admin/welcome.xhtml
@@ -28,7 +28,9 @@
 
             <h:column>
                 <f:facet name="header">Lesson Date</f:facet>
-                <h:outputText value="#{lesson.lessonDate}"/>
+                <h:outputText value="#{lesson.lessonDate}">
+                    <f:convertDateTime type="localDate" dateStyle="long"/>
+                </h:outputText>
             </h:column>
 
             <h:column>
